--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-dash==2.0.0
-dash-bootstrap-components==0.13.1
-numpy==1.21.2
-opencv-python==4.5.3.56
-Pillow==8.2.0
+dash
+dash-bootstrap-components
+numpy
+opencv-python
+Pillow
